# signmate-cc

./: .gitignore  CLAUDE.md  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml
docs/: SIGN-AVATAR-RESEARCH.md
public/ik_data/: deaf.json  dog.json  help.json  year.json
public/signs/: deaf.json  dog.json  help.json  idx_to_gloss.json  year.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/avatar-test/: page.tsx
src/app/bone-test/: page.tsx
src/app/capture/: page.tsx
src/app/dashboard/: page.tsx
src/app/dictionary/: page.tsx
src/app/ik-test/: page.tsx
src/app/interpreter/: page.tsx
src/app/mediapipe-spike/: page.tsx
src/app/playback/: page.tsx
src/app/playback-ik/: page.tsx
src/app/settings/: page.tsx
src/app/smplx-test/: page.tsx
src/app/test/: page.tsx
src/components/accessibility/: AccessibilitySettings.tsx  KeyboardNavigation.tsx  index.ts
src/components/analytics/: AnalyticsDashboard.tsx
src/components/audio/: AudioInputSelector.tsx  AudioMeter.tsx  AudioVisualizer.tsx  index.ts
src/components/avatar/: AvatarCustomizer.tsx  AvatarRenderer.tsx  SMPLXAvatar.tsx  (+5 more)
src/hooks/: index.ts  useAccessibility.ts  useAudioDevices.ts  useAvatarAnimation.ts  useErrorHandler.ts  useKeyboardShortcuts.ts  usePerformanceMonitor.ts  usePoseBlender.ts  useSessionRecording.ts  useSignDictionary.ts  useSignMatePipeline.ts  useStreamingPipeline.ts  useWebSocket.ts
src/store/: index.test.ts  index.ts
src/test/: setup.ts
src/types/: index.ts
tests/: test_example.py
(+178 files in other folders)
